# eb

./: AUTHORS  COPYING  ChangeLog  ChangeLog-ja.html  ChangeLog.0  ChangeLog.2  ChangeLog.html  ChangeLog.txt  ChangeLog0-ja.html  ChangeLog0.html  ChangeLog1-ja.html  ChangeLog1.html  INSTALL  INSTALL-ja  Makefile.am  Makefile.in  NEWS  NEWS-ja.html  NEWS.html  NEWS.txt  README  README-ja  TODO  acconfig.h  acinclude.m4  aclocal.m4  appendix-ja.html  appendix.html  config.h.in  configure  configure.ac  configure.in  eb-3.0-diff.txt  eb.conf.in  eb.css  faq.css  faq.html  gttest.mo  gttest.po  help-ja.txt  (+30 more)
doc/: Makefile.am  Makefile.in  c2html  disctype.c.texi  eb-01.html  eb-02.html  eb-03.html  eb-04.html  eb-05.html  eb-06.html  eb-07.html  eb-08.html  eb-09.html  eb-10.html  eb-11.html  eb-12.html  eb-13.html  eb-14.html  eb.css  eb.html  eb.html.in  eb.info  eb.texi  eb_1.html  eb_2.html  eb_3.html  eb_4.html  eb_5.html  eb_6.html  eb_7.html  eb_8.html  eb_abt.html  eb_toc.html  ebappendix-01.html  ebappendix-02.html  ebappendix-03.html  ebappendix-04.html  ebappendix.html  ebappendix.html.in  ebfont-01.html  (+100 more)
doc-ja/: Makefile.am  Makefile.in  appendix-c.texi  booklist-c.texi  c2texi  disctype-c.texi  disctype.c.texi  eb-ja.html  eb-ja.info  eb-ja.info-1  eb-ja.info-2  eb-ja.info-3  eb-ja.info-4  eb-ja.info-5  eb-ja.info-6  eb-ja.info-7  eb-ja.texi  eb-ja_1.html  eb-ja_10.html  eb-ja_11.html  eb-ja_12.html  eb-ja_13.html  eb-ja_14.html  eb-ja_15.html  eb-ja_16.html  eb-ja_2.html  eb-ja_3.html  eb-ja_4.html  eb-ja_5.html  eb-ja_6.html  eb-ja_7.html  eb-ja_8.html  eb-ja_9.html  eb-ja_abt.html  eb-ja_toc.html  eb-ver.texi  ebappendix-ja.html  ebappendix-ja.info  ebappendix-ja.texi  ebappendix-ja_1.html  (+81 more)
eb/: Makefile.am  Makefile.in  appendix.c  appendix.h  appsub.c  bcd.c  binary.c  binary.h  bitmap.c  book.c  booklist.c  booklist.h  build-post.h  build-post.h.in  build-pre.h  copyright.c  cross.c  defs.h  defs.h.in  dummyin6.c  dummyin6.h  eb.c  eb.h  ebconfig.h  ebnet.c  ebnet.h  ebunzip1.c  endword.c  epwunzip.c  error.c  error.h  exactword.c  filename.c  font.c  font.h  getaddrinfo.c  getaddrinfo.h  graphic.c  hook.c  internal.h  (+39 more)
eb/po/: Makefile.in  Makefile.in.in  POTFILES.in  cat-id-tbl.c  eb.pot  ja.gmo  ja.mo  ja.po
ebappendix/: Makefile.am  Makefile.in  ebappendix.in
ebfont/: Makefile.am  Makefile.in  ebfont.c
ebinfo/: Makefile.am  Makefile.in  ebinfo.c
ebrefile/: Makefile.am  Makefile.in  ebrefile.c  ebrefile.in
ebstopchk/: Makefile.am  Makefile.in  ebstopchk.c
ebstopcode/: Makefile.am  Makefile.in  ebstopcode.c
ebzip/: Makefile.am  Makefile.in  copyfile.c  ebzip.c  ebzip.h  ebzip1.c  filelist.c  filename.c  sebxa.c  speedup.c  unlinkfile.c  unzipbook.c  unzipfile.c  zip1.c  zipbook.c  zipfile.c  zipinfobook.c  zipinfofile.c
intl/: Makefile.am  Makefile.in
libebutils/: Makefile.am  Makefile.in  ebutils.c  ebutils.h.in  fakelog.c  fakelog.h  getopt.c  getopt.h  getopt_long.pl  getumask.c  getumask.h  makedir.c  makedir.h  memset.c  puts_eucjp.c  samefile.c  samefile.h  strcasecmp.c  strerror.c  strlist.c  strlist.h  yesno.c  yesno.h
m4/: Makefile.am  Makefile.in  eb3.m4  eb4.m4  gettext.m4  in6addr.m4  largefile.m4  lcmessage.m4  libtool.m4  sockaddrin6.m4  sockinttypes.m4  ssizet.m4  utimbuf.m4  voidpointer.m4
misc/: ebdump  ebfixlog
po/: Makefile.in  Makefile.in.in  POTFILES.in  cat-id-tbl.c  ebutils.pot  ja.gmo  ja.mo  ja.po
po-eb/: Makefile.in  eb.pot  ja.mo  ja.po
po-ebutils/: Makefile.in  ebutils.pot  ja.mo  ja.po
samples/: Makefile.am  Makefile.in  README  README-ja  aclocal.m4  appendix.c  booklist.c  compile  configure  configure.in  disctype.c  disctype.c.in  font.c  initexit.c  subbook.c  subbook.c.in  text.c  word.c  word.c.in
samples-ja/: Makefile.am  Makefile.in  README-ja  configure  configure.in  disctype.c  subbook.c  word.c
zlib/: ChangeLog  Makefile.am  Makefile.in  README.altered  aclocal.m4  adler32.c  compress.c  configure  configure.ac  configure.in  crc32.c  deflate.c  deflate.h  gzio.c  ltconfig  ltmain.sh  mkinstalldirs  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
